--- a/package.json
+++ b/package.json
@@ -1,28 +1,29 @@
 {
-  "name": "mbc-employee-summary",
+  "name": "unit10hw",
   "version": "1.0.0",
-  "description": "Employee Summary Generator",
+  "description": "OOP and testing for week 10 homework",
   "main": "app.js",
   "directories": {
     "lib": "lib",
     "test": "test"
   },
   "scripts": {
-    "test": "npm run test"
+    "test": "jest --verbose test/*"
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/Suji-GitH/MBC-Employee-Summary.git"
+    "url": "git+https://github.com/stevetrilogy/unit10hw.git"
   },
-  "keywords": [
-    "Employee",
-    "Generator",
-    "Bootcamp"
-  ],
-  "author": "Suji",
+  "author": "",
   "license": "ISC",
   "bugs": {
-    "url": "https://github.com/Suji-GitH/MBC-Employee-Summary/issues"
+    "url": "https://github.com/stevetrilogy/unit10hw/issues"
   },
-  "homepage": "https://github.com/Suji-GitH/MBC-Employee-Summary#readme"
+  "homepage": "https://github.com/stevetrilogy/unit10hw#readme",
+  "dependencies": {
+    "inquirer": "^6.3.1"
+  },
+  "devDependencies": {
+    "jest": "^24.8.0"
+  }
 }
